--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dist"
   ],
   "dependencies": {
-    "qs-esm": "^7.0.2"
+    "qs-esm": "^7.0.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
