--- a/package.json
+++ b/package.json
@@ -3,10 +3,29 @@
   "description": "Common ui utilities",
   "version": "0.0.0",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "scripts": {
+    "build": "pnpm copyfiles && pnpm build:types && pnpm build:swc",
+    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
+    "build:types": "tsc --outDir dist --rootDir ./src",
+    "clean": "rimraf {dist,*.tsbuildinfo}",
+    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
+    "version": "node scripts/ci-version.js",
+    "tag": "node scripts/tag.js"
+  },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "qs-esm": "^7.0.2",
     "slugify": "^1.6.6"
   },
@@ -26,10 +45,14 @@
     "semver": "^7.6.3",
     "sharp": "0.33.5",
     "sort-package-json": "^2.10.0",
+    "tsup": "^8.3.5",
     "typescript": "latest",
     "url": "^0.11.4"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
+  },
+  "peerDependencies": {
+    "next": "^15.1.5"
   }
 }
