--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@konstant/utilities-ui",
   "description": "Common ui utilities",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "exports": {
     ".": {
@@ -21,7 +21,7 @@
     "build:types": "tsc --outDir dist --rootDir ./src",
     "clean": "rimraf {dist,*.tsbuildinfo}",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
-    "version": "node scripts/ci-version.js",
+    "ci:version": "node scripts/ci-version.js",
     "tag": "node scripts/tag.js"
   },
   "dependencies": {
