--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@konstant/utilities-ui",
+  "version": "0.0.5",
   "description": "Common ui utilities",
-  "version": "0.0.4",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "main": "./dist/index.js",
@@ -16,13 +16,17 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm copyfiles && pnpm build:types && pnpm build:swc",
+    "build": "pnpm ci:clean && pnpm tsup",
+    "build:withSwc": "pnpm ci:clean && pnpm ci:copyfiles && pnpm build:types && pnpm build:swc",
     "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
     "build:types": "tsc --outDir dist --rootDir ./src",
-    "clean": "rimraf {dist,*.tsbuildinfo}",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
+    "ci:tag": "node scripts/tag.js",
     "ci:version": "node scripts/ci-version.js",
-    "tag": "node scripts/tag.js"
+    "ci:clean": "rimraf {dist,*.tsbuildinfo}",
+    "ci:copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
+    "dev": "cd ./dev && pnpm dev",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
@@ -30,17 +34,22 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/eslintrc": "^3",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.6.0",
-    "@types/node": "^22.5.4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "child_process": "^1.0.2",
     "copyfiles": "2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.16.0",
+    "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "fs": "0.0.1-security",
-    "prettier": "^3.4.2",
+    "next": "15.1.5",
+    "prettier": "^3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
     "semver": "^7.6.3",
     "sharp": "0.33.5",
@@ -49,10 +58,10 @@
     "typescript": "latest",
     "url": "^0.11.4"
   },
+  "peerDependencies": {
+    "next": "^15"
+  },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
-  },
-  "peerDependencies": {
-    "next": "^15.1.5"
   }
 }
