--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
+    },
+    "./date": {
+      "import": "./dist/date/index.js",
+      "types": "./dist/date/index.d.ts",
+      "default": "./dist/date/index.js"
     }
   },
   "main": "./dist/index.js",
@@ -17,8 +22,6 @@
   ],
   "scripts": {
     "build": "pnpm ci:clean && pnpm tsup",
-    "build:withSwc": "pnpm ci:clean && pnpm ci:copyfiles && pnpm build:types && pnpm build:swc",
-    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
     "build:types": "tsc --outDir dist --rootDir ./src",
     "ci:tag": "node scripts/tag.js",
     "ci:version": "node scripts/ci-version.js",
@@ -29,14 +32,11 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
-    "date-fns": "^4.1.0",
     "qs-esm": "^7.0.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@swc-node/register": "1.10.9",
-    "@swc/cli": "0.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -59,7 +59,8 @@
     "url": "^0.11.4"
   },
   "peerDependencies": {
-    "next": "^15"
+    "next": "^15",
+    "date-fns": "^4"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
