add util functions

--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
   "scripts": {
     "build": "pnpm ci:clean && pnpm tsup",
     "build:types": "tsc --outDir dist --rootDir ./src",
-    "ci:tag": "node scripts/tag.js",
-    "ci:version": "node scripts/ci-version.js",
     "ci:clean": "rimraf {dist,*.tsbuildinfo}",
     "ci:copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
+    "ci:tag": "node scripts/tag.js",
+    "ci:version": "node scripts/ci-version.js",
     "dev": "cd ./dev && pnpm dev",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "qs-esm": "^7.0.2",
     "slugify": "^1"
   },
@@ -43,6 +45,7 @@
     "child_process": "^1.0.2",
     "copyfiles": "2.4.1",
     "cross-env": "^7.0.3",
+    "deepmerge": "^4.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "fs": "0.0.1-security",
@@ -59,8 +62,8 @@
     "url": "^0.11.4"
   },
   "peerDependencies": {
-    "next": "^15",
-    "date-fns": "^4"
+    "date-fns": "^4",
+    "next": "^15"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
