--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@konstant/utilities-ui",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Common ui utilities",
   "type": "module",
   "exports": {
@@ -27,6 +27,7 @@
     "ci:copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "ci:tag": "node scripts/tag.js",
     "ci:version": "node scripts/ci-version.js",
+    "ci:patch": "pnpm ci:version patch && pnpm ci:tag",
     "dev": "cd ./dev && pnpm dev",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
