--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
     "build:types": "tsc --outDir dist --rootDir ./src",
     "ci:clean": "rimraf {dist,*.tsbuildinfo}",
     "ci:copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
+    "ci:patch": "pnpm ci:version patch && pnpm ci:tag",
     "ci:tag": "node scripts/tag.js",
     "ci:version": "node scripts/ci-version.js",
-    "ci:patch": "pnpm ci:version patch && pnpm ci:tag",
     "dev": "cd ./dev && pnpm dev",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "qs-esm": "^7.0.2",
-    "slugify": "^1"
+    "slugify": "^1",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -46,25 +48,22 @@
     "child_process": "^1.0.2",
     "copyfiles": "2.4.1",
     "cross-env": "^7.0.3",
-    "deepmerge": "^4.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "fs": "0.0.1-security",
-    "next": "15.1.5",
     "prettier": "^3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "rimraf": "^6.0.1",
     "semver": "^7.6.3",
     "sharp": "0.33.5",
     "sort-package-json": "^2.10.0",
     "tsup": "^8.3.5",
-    "typescript": "latest",
-    "url": "^0.11.4"
+    "typescript": "latest"
   },
   "peerDependencies": {
     "date-fns": "^4",
-    "next": "^15"
+    "next": "^15",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
