--- a/publish/package.json
+++ b/publish/package.json
@@ -30,13 +30,17 @@
     "tag": "node scripts/tag.js"
   },
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "qs-esm": "^7.0.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1",
+    "url": "^0.11.4"
   },
   "peerDependencies": {
     "date-fns": "^4",
-    "next": "^15"
+    "next": "^15",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
