--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "outDir": "./dist",
-    "rootDir": "./src",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,6 +17,6 @@
     "jsx": "preserve",
     "target": "ES2022"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "./tsup.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
