--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm ci:clean && pnpm tsup",
-    "build:types": "tsc --outDir dist --rootDir ./src",
+    "build": "pnpm ci:clean && pnpm ci:copyfiles && pnpm build:types && pnpm build:swc",
+    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "ci:clean": "rimraf {dist,*.tsbuildinfo}",
     "ci:copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "ci:patch": "pnpm ci:version patch && pnpm ci:tag",
@@ -33,13 +34,15 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
-    "date-fns": "^4",
+    "date-fns": "4.1.0",
     "deepmerge": "^4.3.1",
     "qs-esm": "^7.0.2",
     "slugify": "^1",
     "url": "^0.11.4"
   },
   "devDependencies": {
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.6.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
