--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "jsx": "preserve",
     "target": "ES2022"
   },
-  "include": ["src/**/*", "./tsup.config.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
